trying to fix crazy broken stuff. The robot curves right at the end of movements to knock off gold. The left wheels keep moving when others stop. This seems to happen to other movements but it's less pronounced probably due to being horizontal or small movements.

--- a/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
+++ b/FtcRobotController/src/main/res/layout/activity_ftc_controller.xml
@@ -152,7 +152,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           android:visibility="gone"
           android:screenOrientation="portrait"
           android:id="@+id/tutorial1_activity_java_surface_view"
-          opencv:show_fps="true"
+          opencv:show_fps="false"
           opencv:camera_id="back"
           android:layout_below="@+id/top_bar" />
     </FrameLayout>
